style(sidebar-section): fix divider cutoff

--- a/projects/editor/assets/styles/styles.scss
+++ b/projects/editor/assets/styles/styles.scss
@@ -92,7 +92,7 @@ formly-field {
 
 .expand-icon {
     color: rgba(0, 0, 0, 0.54);
-    transition: transform 0.2s ease-out;
+    transition: transform 0.15s ease-out;
 }
 
 .expand-icon.expanded-90 {
